src/deploy-local/flat-yamls/gitlab-agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/inject: 'false'
  name: gitlab-agent
  namespace: polar
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gitlab-agent
  template:
    metadata:
      labels:
        name: gitlab-agent
      name: gitlab-agent
    spec:
      containers:
        - env:
            - name: SSL_CERT_FILE
              value: /etc/site/gitlab.crt
            - name: PROXY_CA_CERT
              value: /etc/proxy/proxy.pem
            - name: TLS_CA_CERT
              value: /etc/tls/ca.crt
            - name: TLS_CLIENT_CERT
              value: /etc/tls/tls.crt
            - name: TLS_CLIENT_KEY
              value: /etc/tls/tls.key
            - name: BROKER_ADDR
              value: cassini-ip-svc.polar.svc.cluster.local:8080
            - name: CASSINI_SERVER_NAME
              value: cassini-ip-svc.polar.svc.cluster.local
            - name: OBSERVER_BASE_INTERVAL
              value: '300'
            - name: GITLAB_ENDPOINT
              value: https://YOUR_GITLAB_HOST
            - name: GITLAB_TOKEN
              valueFrom:
                secretKeyRef:
                  key: token
                  name: gitlab-secret
          image: polar-gitlab-observer:latest
          name: polar-gitlab-observer
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/tls
              name: client-tls
            - mountPath: /etc/proxy
              name: proxy-ca-cert
              readOnly: true
            - mountPath: /etc/site
              name: gitlab-crt
              readOnly: true
        - env:
            - name: TLS_CA_CERT
              value: /etc/tls/ca.crt
            - name: TLS_CLIENT_CERT
              value: /etc/tls/tls.crt
            - name: TLS_CLIENT_KEY
              value: /etc/tls/tls.key
            - name: BROKER_ADDR
              value: cassini-ip-svc.polar.svc.cluster.local:8080
            - name: CASSINI_SERVER_NAME
              value: cassini-ip-svc.polar.svc.cluster.local
            - name: GRAPH_ENDPOINT
              value: neo4j://polar-db-svc.polar-db.svc.cluster.local:7687
            - name: GRAPH_DB
              value: neo4j
            - name: GRAPH_USER
              value: neo4j
            - name: GRAPH_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: secret
                  name: polar-graph-pw
          image: polar-gitlab-consumer:latest
          imagePullPolicy: Always
          name: polar-gitlab-consumer
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/tls
              name: client-tls
              readOnly: true
      volumes:
        - name: client-tls
          secret:
            secretName: client-tls
        - name: proxy-ca-cert
          secret:
            secretName: proxy-ca-cert
        - name: gitlab-crt
          secret:
            secretName: gitlab-crt
