src/deploy-local/flat-yamls/neo4j-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: polar-neo4j
  namespace: polar-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: polar-neo4j
  serviceName: polar-db-svc
  template:
    metadata:
      labels:
        name: polar-neo4j
      name: polar-neo4j
    spec:
      containers:
        - env:
            - name: NEO4J_AUTH
              valueFrom:
                secretKeyRef:
                  name: neo4j-secret
                  key: NEO4J_AUTH
          image: neo4j:5.26.2
          name: polar-neo4j
          ports:
            - containerPort: 7473
            - containerPort: 7687
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsGroup: 7474
            runAsNonRoot: true
            runAsUser: 7474
          volumeMounts:
            - mountPath: /var/lib/neo4j/conf
              name: neo4j-config-copy
            - mountPath: /var/lib/neo4j/data
              name: polar-db-data
            - mountPath: /var/lib/neo4j/logs
              name: polar-db-logs
      securityContext:
        fsGroup: 7474
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: polar-db-data
          persistentVolumeClaim:
            claimName: polar-db-data
        - name: polar-db-logs
          persistentVolumeClaim:
            claimName: polar-db-logs
        - configMap:
            items:
              - key: neo4j.conf
                path: neo4j.conf
            name: neo4j-config
          name: neo4j-config
        - emptyDir: {}
          name: neo4j-config-copy
