src/deploy-local/flat-yamls/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polar-db-svc
  namespace: polar-db
spec:
  ports:
    - name: http-ui
      port: 7473
      protocol: TCP
      targetPort: 7473
    - appProtocol: kubernetes.io/wss
      name: bolt
      port: 7687
      protocol: TCP
      targetPort: 7687
  selector:
    name: polar-neo4j
  type: ClusterIP
